--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j6.1.6</install4j.home>
         <!--<install4j.licenseKey>${env.INS_LICENSE}</install4j.licenseKey>-->
         <install4j.licenseKey>${env.CI_LICENSE_KEY}</install4j.licenseKey>
+        <dependency.locations.enabled>false</dependency.locations.enabled>
     </properties>
 
     <organization>
@@ -161,7 +162,7 @@
         <dependency>
             <groupId>com.kodedu.terminalfx</groupId>
             <artifactId>terminalfx</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.5</version>
         </dependency>
 
     </dependencies>
